Fix bug with unit in spacing mixin.

--- a/assets/sass/mixins/spacing/_spacing.scss
+++ b/assets/sass/mixins/spacing/_spacing.scss
@@ -1,7 +1,8 @@
-@mixin spacing($property, $spacing, $unit: 'rem') {
+@mixin spacing($property, $spacing) {
   $converted-list: ();
 
   @each $x in $spacing {
+    $unit: 'rem';
     @if $x == 0 {
       $unit: '';
     }
